--- a/model.ipynb
+++ b/model.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-04-18T07:01:06.051555Z",
+     "start_time": "2024-04-18T07:01:03.168498Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -41,10 +45,14 @@
     "    dp.run()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-18T07:01:08.994484Z",
+     "start_time": "2024-04-18T07:01:08.991862Z"
+    }
    },
    "id": "753d2246f325d86d",
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "code",
