change filename for consistency & correctnece

--- a/DescriptiveStatistics/descriptive_statistics.ipynb
+++ b/DescriptiveStatistics/descriptive_statistics.ipynb
@@ -380,10 +380,10 @@
    "id": "691be548-7592-4a15-981a-fc2c54cd0f96",
    "metadata": {},
    "source": [
-    "#with open('../AudioFeaturesExtraction/dev_data.pkl','rb') as file:\n",
+    "#with open('../audio/dev_data.pkl','rb') as file:\n",
     "#    dev_audio_dict = pickle.load(file)\n",
     "\n",
-    "#with open('../AudioFeaturesExtraction/test_data.pkl','rb') as file:\n",
+    "#with open('../audio/test_data.pkl','rb') as file:\n",
     "#    test_audio_dict = pickle.load(file)\n",
     "\n",
     "with open('../AudioFeaturesExtraction/train_data.pkl','rb') as file:\n",
@@ -1134,7 +1134,7 @@
     "\n",
     "# Example usage:\n",
     "# Load your train_data.pkl dictionary\n",
-    "# with open('../AudioFeaturesExtraction/train_data.pkl', 'rb') as f:\n",
+    "# with open('../audio/train_data.pkl', 'rb') as f:\n",
     "    # train_data_dict = pickle.load(f)\n",
     "\n",
     "check_first_audio_properties(train_data_dict)"
