adding documentation to some scripts

--- a/DescriptiveStatistics/descriptive_statistics.ipynb
+++ b/DescriptiveStatistics/descriptive_statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a658ca5455bd9de5",
    "metadata": {
     "ExecuteTime": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "16006670-0a08-4948-b330-ae9a0fd6646c",
    "metadata": {},
    "outputs": [
@@ -70,9 +70,6 @@
     "\n",
     "# Calculate the average utterance length by Sentiment\n",
     "avg_utterance_length = train_df.groupby('Sentiment')['Utterance_Length'].mean().reset_index()\n",
-    "\n",
-    "# Plot the average utterance length by Sentiment\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "colors = ['skyblue', 'lightgreen', 'salmon', 'lightcoral', 'gold']  # Different colors for each sentiment\n",
@@ -182,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "train_df.groupby('Emotion')['word_count'].mean()\n"
+    "train_df.groupby('Emotion')['word_count'].mean()"
    ]
   },
   {
@@ -244,7 +241,6 @@
     "# Sort the DataFrame by the count and select the top 6\n",
     "top_6_speakers = speaker_df.sort_values(by='Count', ascending=False).head(6)\n",
     "\n",
-    "# Display the DataFrame\n",
     "print(top_6_speakers)\n",
     "print((top_6_speakers['Proportion']).sum())"
    ]
@@ -438,43 +434,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "165d411c5a3c55b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-02T10:14:32.651719Z",
-     "start_time": "2024-04-02T10:14:31.488734Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "generate_word_clouds(train_df_top_10, 'Sentiment')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "755fbe02-1dc7-4c22-a800-5a91ebe092d7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-02T10:14:34.968467Z",
-     "start_time": "2024-04-02T10:14:32.652319Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "generate_word_clouds(train_df_top_10, 'Emotion')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 97,
    "id": "55f2cb194d83cbb2",
    "metadata": {
@@ -493,38 +452,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "e309df33774f14e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-02T10:14:40.642564Z",
-     "start_time": "2024-04-02T10:14:37.371041Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "generate_word_clouds(train_df_top_10, 'Speaker')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a63315cc-8562-417a-b796-a138d6e88ed7",
    "metadata": {},
    "source": [
     "**Audio Features Descriptive Statistics**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fca72f4d-db65-43d0-a163-817cb1757406",
-   "metadata": {},
-   "source": [
-    "**First Version - simple audio features with 3 classes**"
    ]
   },
   {
@@ -534,11 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open('../audio/dev_data.pkl','rb') as file:\n",
-    "#    dev_audio_dict = pickle.load(file)\n",
-    "\n",
-    "#with open('../audio/test_data.pkl','rb') as file:\n",
-    "#    test_audio_dict = pickle.load(file)\n",
+    "with open('../audio/test_data.pkl','rb') as file:\n",
+    "   test_audio_dict = pickle.load(file)\n",
     "\n",
     "with open('../AudioFeaturesExtraction/train_data.pkl','rb') as file:\n",
     "    train_audio_dict = pickle.load(file)"
@@ -601,12 +530,10 @@
     "    return combined_features_df\n",
     "\n",
     "sample_rate = 16000  # Common sample rate for high-quality audio\n",
-    "#dev_feature_data = process_audio_data(dev_audio_dict, sample_rate)\n",
-    "#test_feature_data = process_audio_data(test_audio_dict, sample_rate)\n",
+    "test_feature_data = process_audio_data(test_audio_dict, sample_rate)\n",
     "train_feature_data = process_audio_data(train_audio_dict, sample_rate)\n",
     "\n",
-    "#print(dev_feature_data.head())\n",
-    "#print(test_feature_data.head())\n",
+    "print(test_feature_data.head())\n",
     "print(train_feature_data.head())"
    ]
   },
@@ -640,41 +567,21 @@
     "labels_dict = {\n",
     "            'negative': 0,\n",
     "            'neutral': 1,\n",
-    "            'positive': 0}\n",
-    "file_path = '/Users/orl/studies/statistical learning/nlp-with-audio/MELD.Raw/train/train_sent_emo.csv'\n",
+    "            'positive': 2}\n",
+    "file_path = '../MELD.Raw/train/train_sent_emo.csv'\n",
     "\n",
-    "dev_info_file = file_key_generator(file_path, labels_dict)"
+    "train_info_file = file_key_generator(file_path, labels_dict)\n",
+    "train_info_file_subset = train_info_file[['file_key','label']]\n",
+    "print(train_info_file_subset.head())\n",
+    "\n",
+    "features_data = pd.read_csv('../audio/train_fe.csv')\n",
+    "audio_features= [col for col in features_data.columns if col.startswith('audio_feature_')]\n",
+    "all_features = audio_features + ['file_key']\n",
+    "audio_features_data = features_data[all_features]\n",
+    "print(audio_features_data.head())\n",
+    "train_joined_with_audio = audio_features_data.merge(train_info_file_subset, left_on = 'file_key', right_on = 'file_key')\n",
+    "print(train_joined_with_audio.head())\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "4b1065b7-d343-4af7-8129-7a7cdc5b01a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_joined_with_audio = dev.merge(dev_info_file[['file_key', 'label']], left_on = 'scene_id', right_on = 'file_key')\n",
-    "dev_joined_with_audio = dev_joined_with_audio.drop(columns=['Unnamed: 0'])\n",
-    "dev_joined_with_audio = dev_joined_with_audio.drop(columns=['fourier_tempogram_mean', 'poly_features_0', 'poly_features_1', 'poly_features_2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "def6b9d0-0cee-4df3-9d72-1cd8c0e9ff78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_joined_with_audio.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07889695-f5ec-4029-95cc-efd23fc3a103",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -696,7 +603,7 @@
     "       'chroma_median_3', 'chroma_median_4', 'chroma_median_5',\n",
     "       'chroma_median_6', 'chroma_median_7', 'chroma_median_8',\n",
     "       'chroma_median_9', 'chroma_median_10', 'chroma_median_11']\n",
-    "df_cor = dev_joined_with_audio[num_cols].corr(method='spearman')"
+    "df_cor = train_joined_with_audio[num_cols].corr(method='spearman')"
    ]
   },
   {
@@ -706,7 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_joined_with_audio['label'].value_counts(normalize=True)"
+    "train_joined_with_audio['label'].value_counts(normalize=True)"
    ]
   },
   {
@@ -716,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_joined_with_audio['label'].value_counts(normalize=True)"
+    "train_joined_with_audio['label'].value_counts(normalize=True)"
    ]
   },
   {
@@ -745,82 +652,6 @@
     "# Adjust layout to prevent overlap and save the figure if needed\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ed8758d-a701-4595-9b5d-0dc94fda5be2",
-   "metadata": {},
-   "source": [
-    "**Second Version - simple audio features with 2 classes**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "54589869-7cee-4e35-b7ed-6e66ff5dfcac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming 'df' is your DataFrame after joining and cleaning\n",
-    "features = dev_joined_with_audio.columns[:-3]\n",
-    "print(features)\n",
-    "label = dev_joined_with_audio['label']\n",
-    "\n",
-    "log_likelihoods = []\n",
-    "\n",
-    "for feature in features:\n",
-    "    # Prepare the feature data with an intercept\n",
-    "    X = sm.add_constant(dev_joined_with_audio[feature])  # Adds a constant term to the feature\n",
-    "    y = label\n",
-    "\n",
-    "    # Fit logistic regression model\n",
-    "    model = sm.Logit(y, X).fit(disp=0)  # disp=0 turns off the fitting summary output\n",
-    "\n",
-    "    # Store the log-likelihood\n",
-    "    log_likelihoods.append(model.llf)  # llf is the log likelihood of the fitted model\n",
-    "\n",
-    "# Create a DataFrame to sort features by log-likelihood\n",
-    "results = pd.DataFrame({\n",
-    "    'Feature': features,\n",
-    "    'Log-Likelihood': log_likelihoods\n",
-    "}).sort_values(by='Log-Likelihood', ascending=True)\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Assuming 'results' DataFrame from your code is already prepared and sorted\n",
-    "\n",
-    "# Plotting\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "# Scatter plot where we use the index as the y-value and log-likelihood as the x-value\n",
-    "plt.scatter(results['Log-Likelihood'], range(len(results['Feature'])), color='b')\n",
-    "\n",
-    "# Setting the y-ticks to show feature names\n",
-    "plt.yticks(range(len(results['Feature'])), results['Feature'])\n",
-    "\n",
-    "plt.title('Log-Likelihood of Logistic Regression Models by Feature')\n",
-    "plt.xlabel('Log-Likelihood')\n",
-    "plt.ylabel('Feature')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "6928590d-ee5a-44ff-829a-358eea5810a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_features = results.tail(12)['Feature'].values.tolist()\n",
-    "best_features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74faef8a-bd26-4a0b-896d-9b8588557966",
-   "metadata": {},
-   "source": [
-    "**Third Version - more audio features**"
    ]
   },
   {
@@ -1065,36 +896,6 @@
     }
    ],
    "source": [
-    "def file_key_generator(file_path, labels_dict):\n",
-    "    info_file = pd.read_csv(file_path)\n",
-    "    # Creating file_key which is a unique identifier for each scene.\n",
-    "    info_file['file_key'] = 'dia' + info_file['Dialogue_ID'].astype(str) + '_' + 'utt' + info_file[\n",
-    "        'Utterance_ID'].astype(str)\n",
-    "\n",
-    "    info_file['label'] = info_file['Sentiment'].map(labels_dict)\n",
-    "    info_file = info_file.sort_values(by='file_key')\n",
-    "    return info_file\n",
-    "\n",
-    "labels_dict = {\n",
-    "            'negative': 0,\n",
-    "            'neutral': 1,\n",
-    "            'positive': 2}\n",
-    "file_path = '../MELD.Raw/train/train_sent_emo.csv'\n",
-    "\n",
-    "train_info_file = file_key_generator(file_path, labels_dict)\n",
-    "train_info_file_subset = train_info_file[['file_key','label']]\n",
-    "print(train_info_file_subset.head())\n",
-    "\n",
-    "features_data = pd.read_csv('../audio/train_fe.csv')\n",
-    "audio_features= [col for col in features_data.columns if col.startswith('audio_feature_')]\n",
-    "all_features = audio_features + ['file_key']\n",
-    "audio_features_data = features_data[all_features]\n",
-    "print(audio_features_data.head())\n",
-    "train_joined_with_audio = audio_features_data.merge(train_info_file_subset, left_on = 'file_key', right_on = 'file_key')\n",
-    "print(train_joined_with_audio.head())\n",
-    "\n",
-    "\n",
-    "\n",
     "# Set the aesthetics for the plots\n",
     "sns.set(style='whitegrid')\n",
     "palette = {0: 'blue', 1: 'orange', 2: 'green'}\n",
@@ -1113,62 +914,7 @@
     "    plt.ylabel('Density')\n",
     "    \n",
     "    # Show the plot\n",
-    "    plt.show()\n",
-    "\n",
-    "    # Optionally, if you want to save each figure to a file\n",
-    "    # plt.savefig(f'path/to/save/{feature}_distribution.png')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "c08af861-5cc0-46cc-9ba8-643efe24678d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "endog must be in the unit interval.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[67], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m y \u001b[38;5;241m=\u001b[39m label\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Fit logistic regression model\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43msm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLogit\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mfit(disp\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)  \u001b[38;5;66;03m# disp=0 turns off the fitting summary output\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Store the log-likelihood\u001b[39;00m\n\u001b[1;32m     16\u001b[0m log_likelihoods\u001b[38;5;241m.\u001b[39mappend(model\u001b[38;5;241m.\u001b[39mllf)  \u001b[38;5;66;03m# llf is the log likelihood of the fitted model\u001b[39;00m\n",
-      "File \u001b[0;32m~/PycharmProjects/nlp-with-audio/venvs/nlp-with-audio3.11/lib/python3.11/site-packages/statsmodels/discrete/discrete_model.py:479\u001b[0m, in \u001b[0;36mBinaryModel.__init__\u001b[0;34m(self, endog, exog, offset, check_rank, **kwargs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m, MultinomialModel):\n\u001b[1;32m    478\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mendog \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mendog \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)):\n\u001b[0;32m--> 479\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mendog must be in the unit interval.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    481\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m offset \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    482\u001b[0m     \u001b[38;5;28mdelattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moffset\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: endog must be in the unit interval."
-     ]
-    }
-   ],
-   "source": [
-    "# Assuming 'df' is your DataFrame after joining and cleaning\n",
-    "features = train_joined_with_audio.columns[:-3]\n",
-    "label = train_joined_with_audio['label']\n",
-    "\n",
-    "log_likelihoods = []\n",
-    "\n",
-    "for feature in features:\n",
-    "    # Prepare the feature data with an intercept\n",
-    "    X = sm.add_constant(train_joined_with_audio[feature])  # Adds a constant term to the feature\n",
-    "    y = label\n",
-    "\n",
-    "    # Fit logistic regression model\n",
-    "    model = sm.Logit(y, X).fit(disp=0)  # disp=0 turns off the fitting summary output\n",
-    "\n",
-    "    # Store the log-likelihood\n",
-    "    log_likelihoods.append(model.llf)  # llf is the log likelihood of the fitted model\n",
-    "\n",
-    "# Create a DataFrame to sort features by log-likelihood\n",
-    "results = pd.DataFrame({\n",
-    "    'Feature': features,\n",
-    "    'Log-Likelihood': log_likelihoods\n",
-    "}).sort_values(by='Log-Likelihood', ascending=False)\n",
-    "\n",
-    "# Plotting\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "sns.barplot(x='Log-Likelihood', y='Feature', data=results)\n",
-    "plt.title('Log-Likelihood of Logistic Regression Models by Feature')\n",
-    "plt.xlabel('Log-Likelihood')\n",
-    "plt.ylabel('Feature')\n",
-    "plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -1296,7 +1042,6 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "# Example usage\n",
     "plot_filtered_maxima_by_label(train_audio_dict, 44100, 2000)"
    ]
   },
@@ -1358,7 +1103,6 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "# Example usage\n",
     "plot_filtered_minima_by_label(train_audio_dict, 44100, 2000)"
    ]
   },
@@ -1427,7 +1171,6 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "# Example usage\n",
     "plot_average_filtered_fft_by_label(train_audio_dict, 44100, 2000)"
    ]
   },
@@ -1492,7 +1235,6 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "# Example usage\n",
     "plot_average_spectrogram_by_label(train_audio_dict, 44100)"
    ]
   },
@@ -1563,7 +1305,6 @@
     }
    ],
    "source": [
-    "# Assuming 'train_joined_with_audio' is your DataFrame\n",
     "df = train_joined_with_audio\n",
     "\n",
     "# Select only the audio feature columns, excluding 'audio_feature_tempo'\n",
@@ -1663,7 +1404,6 @@
     }
    ],
    "source": [
-    "# Assuming 'train_joined_with_audio' is your DataFrame\n",
     "df = train_joined_with_audio\n",
     "\n",
     "# Select only the audio feature columns, excluding 'audio_feature_tempo'\n",
@@ -1756,7 +1496,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "plot_average_filtered_fft(dev_audio_dict, 44100, 5000)"
+    "plot_average_filtered_fft(train_audio_dict, 44100, 5000)"
    ]
   },
   {
@@ -2026,14 +1766,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87e97a46-38db-4b88-9bc3-dfd7fa6b8f42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
