fix bug with label column

--- a/DescriptiveStatistics/descriptive_statistics.ipynb
+++ b/DescriptiveStatistics/descriptive_statistics.ipynb
@@ -583,7 +583,7 @@
    "id": "9f373aac-cf65-4b5b-bc57-7896dcc165b7",
    "metadata": {},
    "source": [
-    "features = dev_joined_with_audio.columns[:-3]\n",
+    "features = train_joined_with_audio.columns[:-3]\n",
     "\n",
     "# Set the aesthetics for the plots\n",
     "sns.set(style='whitegrid')\n",
@@ -594,7 +594,7 @@
     "\n",
     "for i, feature in enumerate(features):\n",
     "    # Plot each feature by label in the same subplot\n",
-    "    sns.histplot(data=dev_joined_with_audio, x=feature, hue='label', element='step', stat='density', common_norm=False, ax=axes[i])\n",
+    "    sns.histplot(data=train_joined_with_audio, x=feature, hue='label', element='step', stat='density', common_norm=False, ax=axes[i])\n",
     "    axes[i].set_title(f'Distribution of {feature} by label')\n",
     "    axes[i].set_xlabel('')\n",
     "    axes[i].set_ylabel('Density')\n",
@@ -779,7 +779,7 @@
     "    plt.ylabel('Average Amplitude')\n",
     "    plt.show()\n",
     "\n",
-    "plot_average_fft(dev_audio_dict, 44100)"
+    "plot_average_fft(train_audio_dict, 44100)"
    ],
    "outputs": []
   },
